# pypogo

./: .gitlab-ci.yml  .readthedocs.yml  .travis.yml  CHANGELOG.md  README.rst  pyproject.toml  run_doctests.sh  run_linter.sh  run_tests.py  setup.py
.circleci/: config.yml
.github/workflows/: tests.yml
dev/: ci_public_gpg_key.pgp.enc  ci_secret_gpg_subkeys.pgp.enc  gpg_owner_trust.enc  old.py  setup_secrets.sh
docs/source/: conf.py  index.rst  modules.rst  pypogo.rst
pypogo/: __init__.py  battle.py  data.py  meta.py  meta_ultra.py  pogo_api.py  pokemon.py  pvp_inventory.py  pvp_teams.py  pvpoke_driver.py  pvpoke_experiment.py  qa.py
pypogo/utils/: __init__.py  priority_queue.py
requirements/: runtime.txt
tests/: test_api.py  test_import.py  test_regional_forms.py
